8261710: SA DSO objects have sizes that are too large